GitVersion1/objects/Potential_History_Filter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Competitor__c</fullName>
        <label>Is Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_display_in_Page__c</fullName>
        <label>To display in Page</label>
        <type>TextArea</type>
    </fields>
    <label>Potential History Filter</label>
</CustomObject>